--- a/src/Map.css
+++ b/src/Map.css
@@ -10,3 +10,32 @@
 .mapa .leaflet-container{
     height: 100%;
 }
+
+.info-flag img{
+    width: 100px;
+    border-radius: 5px;
+}
+
+.info-name{
+    font-size: 20px;
+    font-weight: bold;
+    color: #555555;
+}
+
+.info-flag{
+    height: 80px;
+    width: 100%;
+    background-size: cover;
+    border-radius: 8px;
+}
+
+.info-cases,
+.info-recovered,
+.info-deaths {
+    font-size: 16px;
+    margin-top: 5px;
+}
+
+.info-container{
+    width: 150px;
+}
