Finalizando e configurando fibase deploy

--- a/src/App.css
+++ b/src/App.css
@@ -14,6 +14,11 @@ body{
   padding: 20px;
 }
 
+.app__header > h1{
+  color: #fc3c3c;
+  font-size: 2rem;
+}
+
 .app__header{
   display: flex;
   align-items: center;
@@ -28,6 +33,26 @@ body{
 .app__stats{
   display: flex;
   justify-content: space-between;
+}
+
+.app__direito{
+  display: flex;
+  flex-direction: column;
+}
+
+.app__direito .MuiCardContent-root {
+  display: flex;
+  flex-direction: column;
+  flex-grow: 1;
+}
+
+.app_grafico{
+  flex-grow: 1;
+}
+
+.app__graficoTitulo{
+  margin-top: 20px;
+  margin-bottom: 20px;
 }
 
 @media (max-width: 990px){
