--- a/src/Info.css
+++ b/src/Info.css
@@ -1,5 +1,6 @@
 .infoBox{
     flex: 1;
+    cursor: pointer;
 }
 
 .infoBox:not(:last-child) {
@@ -7,7 +8,15 @@
 }
 
 .infoBox--selected{
-    border-top: 10px solid #61b8d3;
+    border-top: 10px solid #2c915e;
+}
+
+.infoBox--red{
+    border-color: #cc1034;
+}
+
+.infoBox_casos--green{
+    color: #2c915e !important;
 }
 
 .infoBox__casos{
